# Human-following-drone

./: README.md
raspbrry pi/: stream_client.py  stream_client_fast.py
scripts/: drone_publisher.py  drone_publisher_webcam.py  drone_subscriber.py  stream_server_test.py
setup/: CMakeLists.txt  ROS and Gazebo Installation.odt  ROS for Ubuntu18.04.docx  Useful links.docx  offb_node.cpp  ubuntu18.sh
